[workspace]
members = ["core", "macro", "."]
resolver = "2"
exclude = ["examples"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE"
authors = ["w-sodalite@hotmail.com"]
readme = "README.md"
repository = "https://github.com/w-sodalite/leptos-controls.git"

[package]
name = "leptos-controls"
version.workspace = true
edition.workspace = true

[dependencies]
leptos-controls-core = { path = "core" }
leptos-controls-macro = { path = "macro" }

[dev-dependencies]
leptos = { version = "0.6" }

[features]
thaw = ["leptos-controls-core/thaw"]