[workspace]
members = ["core", "macro", "."]
exclude = ["examples"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
authors = ["w-sodalite@hotmail.com"]
homepage = "https://github.com/w-sodalite/leptos-controls.git"
repository = "https://github.com/w-sodalite/leptos-controls.git"

[workspace.metadata.release]
registry = "crates-io"
shared-version = true
consolidate-commits = true
pre-release-commit-message = "Release {{version}}"
tag-name = "v{{version}}"
allow-branch = ["master"]

[package]
name = "leptos-controls"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Leptos Controls"

[dependencies]
leptos-controls-core = { path = "core", version = "0.1.1" }
leptos-controls-macro = { path = "macro", version = "0.1.1" }

[dev-dependencies]
leptos = { version = "0.6" }

[features]
thaw = ["leptos-controls-core/thaw"]
