[package]
name = "leptos-controls-core"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Leptos Controls Core"

[dependencies]
leptos = { version = "0.6" }
thaw_utils = { version = "0.0.6", optional = true }

[features]
thaw = ["dep:thaw_utils"]
