[package]
name = "leptos-controls-macro"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Leptos Controls Macro"


[lib]
proc-macro = true

[dependencies]
quote = { version = "1.0" }
darling = { version = "0.20" }
proc-macro2 = { version = "1.0" }
syn = { version = "2.0", features = ["full"] }